--- a/Firebase/FirebaseApplication/app/src/main/AndroidManifest.xml
+++ b/Firebase/FirebaseApplication/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainMenu"></activity>
+        <activity android:name=".SendData"></activity>
+        <activity android:name=".ViewProfile"></activity>
     </application>
 
 </manifest>
