--- a/Firebase/FirebaseApplication/app/src/main/AndroidManifest.xml
+++ b/Firebase/FirebaseApplication/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SendData">
+        <activity android:name=".Authentication">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainMenu"></activity>
-        <activity android:name=".Authentication"></activity>
+        <activity android:name=".SendData"></activity>
         <activity android:name=".ViewProfile"></activity>
         <activity android:name=".Register"></activity>
     </application>
