Longpress to swipex

--- a/LatestGestures/app/src/main/AndroidManifest.xml
+++ b/LatestGestures/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".DoubleTap" />
-        <activity android:name=".LongPress"></activity>
+        <activity android:name=".LongPress" />
+        <activity android:name=".SwipeX"></activity>
     </application>
 
 </manifest>
