--- a/Firebase/FirebaseApplication/app/src/main/AndroidManifest.xml
+++ b/Firebase/FirebaseApplication/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".ViewProfile" />
         <activity android:name=".LongPressProfile" />
         <activity android:name=".HorizontalSwipeProfile" />
+        <activity android:name=".DoubleTapProfile" />
         <activity android:name=".VerticalSwipeProfile" />
         <activity android:name=".ScrollProfile"></activity>
     </application>
